--- a/DIP/DIP.csproj
+++ b/DIP/DIP.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F80826E9-686F-43AC-90A5-66521EA6EF40}</ProjectGuid>
+    <ProjectGuid>{C939152B-E7D2-47E0-90ED-D17B704A00D8}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>OCP</RootNamespace>
-    <AssemblyName>OCP</AssemblyName>
+    <RootNamespace>DIP</RootNamespace>
+    <AssemblyName>DIP</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,15 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GoodExample\Calculator.cs" />
-    <Compile Include="GoodExample\Circle.cs" />
-    <Compile Include="GoodExample\Abstraction\Shape.cs" />
-    <Compile Include="GoodExample\Square.cs" />
-    <Compile Include="PoorExample\Calculator.cs" />
-    <Compile Include="PoorExample\Circle.cs" />
+    <Compile Include="PoorExample\Product.cs" />
+    <Compile Include="PoorExample\ProductBusinessLogic.cs" />
+    <Compile Include="PoorExample\ProductDataAccess.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PoorExample\Square.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
